CCD-5867 Further changes from parent/master branches